# Liquid

./: CMakeLists.txt  LICENSE.md  README.md
src/: common.h  main.cpp
src/glad/: glad.c  glad.h
src/image/: image.cpp  image.h
src/math/: aabb.cpp  aabb.h  math.cpp  math.h  matrix.h  random.cpp  random.h  ray.h  transform.h  vector.h
src/renderer/: camera.h  scene.h
src/renderer/displayer/: debug_display_win32.cpp  debug_display_win32.h  display.cpp  display.h  overlay.cpp  overlay.h
src/renderer/displayer/raster/: raster.cpp  raster.h
src/renderer/displayer/shaders/: quad.frag.glsl  quad.vert.glsl  raster.frag.glsl  raster.vert.glsl
src/renderer/raycaster/: caster.cpp  caster.h  geometry.cpp  geometry.h  hit_record.h  material.cpp  material.h
src/renderer/raycaster/accelerator/: bvh.cpp  bvh.h
src/renderer/raycaster/hittable/: model.h  object.cpp  object.h
src/renderer/samples/: samples.cpp  samples.h
src/thread/: threadpool.cpp  threadpool.h
src/utils/: fileloader.h  shaderloader.cpp  shaderloader.h
